Update Calculator JS

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>Calculator Procentual <br> Relativ</h1>
     <div class="calc">
-        <input id="unu" type="number"><br>
-        <input id="doi" type="number">
+        <input id="unu" type="number" placeholder="Introdu primul numar"><br>
+        <input id="doi" type="number" placeholder="Introdu al doilea numar">
     </div>
     <div>
-        <button id="buton" onclick="myFunction()">Apasa Aici</button>
+        <button id="buton" onclick="myFunction()">Rezultat</button>
         <p id="apasa"></p>
     </div>
     <div>
