Update Calculator JS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Calculator Procentual <br> Relativ</h1>
     <div class="calc">
-        <input id="unu" type="number" placeholder="Introdu primul numar"><br>
-        <input id="doi" type="number" placeholder="Introdu al doilea numar">
+        <input id="unu" type="number" placeholder="Introdu primul numar" value=""><br>
+        <input id="doi" type="number" placeholder="Introdu al doilea numar" value="">
     </div>
     <div>
         <button id="buton" onclick="myFunction()">Rezultat</button>
