Update Calculator JS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <h1>Calculator Procentual <br> Relativ</h1>
+
+    
     <div class="calc">
         <input id="unu" type="number" placeholder="Introdu primul numar" value=""><br>
         <input id="doi" type="number" placeholder="Introdu al doilea numar" value="">
     </div>
     <div>
-        <button id="buton" onclick="myFunction()">Rezultat</button>
-        <p id="apasa"></p>
+        <button id="buton" onclick="myFunction()">Rezultat</button><br>
+        <input type="text" id="apasa" placeholder="Rezultat">
     </div>
     <div>
         <button id="reset" onclick="myReset()">Reset</button>
