JS Calculator Update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div>
         <button id="buton" onclick="myFunction()">Rezultat</button><br>
-        <input type="text" id="apasa" placeholder="Rezultat">
+        <input type="text" id="apasa" placeholder="Rezultat" disabled>
     </div>
     <div>
         <button id="reset" onclick="myReset()">Reset</button>
