Update JS Calculator

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <div>
         <button id="buton" onclick="myFunction()">Rezultat</button><br>
+        <span id="error"></span><br>
         <input type="text" id="apasa" placeholder="Rezultat" disabled>
     </div>
     <div>
