JS Calculator Update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <button id="buton" onclick="myFunction()">Rezultat</button><br>
         <span id="error"></span><br>
-        <input type="text" id="apasa" placeholder="Rezultat" disabled>
+        <label>Rezultat :<br><input type="text" id="apasa" disabled></label>
     </div>
     <div>
         <button id="reset" onclick="myReset()">Reset</button>
