Update JS Procentual Calculator

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <div>
         <button id="reset" onclick="myReset()">Reset</button>
     </div>
-
+    <footer>
+        <div id="an">@eduardbede</div>
+        <a href="https://github.com/eduardbede">Visit GitHub</a>
+      
+    </footer>
     <script src="calculator.js">
 
      </script>
